@@ -665,7 +665,7 @@ public final class CpmValidator121 {
     }
 
     private static void requireNotBlank(String field, String value) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             throw new CpmValidationException("Missing mandatory field: " + field);
         }
     }
